--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -2,3 +2,47 @@ url: https://fsisnio.github.io/gitspero/
 template:
   bootstrap: 5
 
+navbar:
+  structure:
+    left:  [home, reference, articles, news]
+    right: [github]
+  components:
+    home:
+      text: "Accueil"
+      href: index.html
+    reference:
+      text: "Référence"
+      href: reference/index.html
+    articles:
+      text: "Articles"
+      href: articles/index.html
+    news:
+      text: "Actualités"
+      href: news/index.html
+    github:
+      icon: fa-github
+      href: https://github.com/fsisnio/gitspero
+
+reference:
+  - title: "Fonctions principales"
+    desc: "Documentation des fonctions principales du package."
+    contents:
+      - calcul_distribution_age
+      - compter_nombre_d_adjoints
+      - compter_nombre_d_elus
+      - trouver_l_elu_le_plus_age
+      - summary.commune
+      - summary.departement
+      - plot.commune
+      - plot.departement
+
+articles:
+  - title: "Guide d'utilisation"
+    contents:
+      - vignette
+
+news:
+  one_page: true
+  releases:
+    - text: "Version 1.0.0 - Initial Release"
+      href: news/index.html
