--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: gitspero
 Title: Projet de fin de cours de Github et R avancé
 Version: 0.0.0.9000
 Authors@R: 
-    person("Spero", "FALADE", , "first.last@example.com", role = c("aut", "cre"))
+    person("Spero", "FALADE", email = "first.last@example.com", role = c("aut", "cre"))
 Description: Ce package permet de générer des résumés statistiques et des rapports détaillés 
     pour des données géographiques spécifiques, telles que les communes et les départements. 
     Il offre des outils pour l'analyse des données régionales, y compris le calcul des distributions 
@@ -16,22 +16,10 @@ RoxygenNote: 7.3.2
 URL: https://fsisnio.github.io/gitspero/
 BugReports: https://github.com/utilisateur/R_advanced_project/issues
 VignetteBuilder: knitr
-
 Depends: 
     R (>= 4.0.0)
-
 Imports: 
-    dplyr, 
-    ggplot2, 
-    tidyr, 
-    sf, 
-    rmarkdown, 
-    knitr, 
-    leaflet
-
+    dplyr, ggplot2, tidyr, sf, rmarkdown, knitr, leaflet
 Suggests: 
-    testthat, 
-    covr, 
-    pkgdown
-
+    testthat, covr, pkgdown
 Config/Needs/website: pkgdown
